@@ -136,3 +136,8 @@ standard moment n=5, value=class=Point name=Unnamed dimension=1 values=[123.623]
 Standard representative=TruncatedDistribution(Normal(mu = 2, sigma = 1.5), bounds = ]-inf (-9.47594), 4])
 Distribution parameters      =[2,1.5,4]
 Distribution after setParameter =[1,1.5,4]
+d=class=TruncatedDistribution name=TruncatedDistribution distribution=class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[1] sigma=class=Point name=Unnamed dimension=1 values=[2] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1] bounds=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[-1] upper bound=class=Point name=Unnamed dimension=1 values=[4] finite lower bound=[1] finite upper bound=[1] thresholdRealization=0.5, simplified=class=TruncatedNormal name=TruncatedNormal dimension=1 mu=1 sigma=2 a=-1 b=4
+d=class=TruncatedDistribution name=TruncatedDistribution distribution=class=Uniform name=Uniform dimension=1 a=1 b=2 bounds=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[0.2] upper bound=class=Point name=Unnamed dimension=1 values=[2.4] finite lower bound=[1] finite upper bound=[1] thresholdRealization=0.5, simplified=class=Uniform name=Uniform dimension=1 a=1 b=2
+d=class=TruncatedDistribution name=TruncatedDistribution distribution=class=Exponential name=Exponential dimension=1 lambda=1 gamma=2 bounds=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[2.5] upper bound=class=Point name=Unnamed dimension=1 values=[65] finite lower bound=[1] finite upper bound=[1] thresholdRealization=0.5, simplified=class=Exponential name=Exponential dimension=1 lambda=1 gamma=2.5
+d=class=TruncatedDistribution name=TruncatedDistribution distribution=class=TruncatedDistribution name=TruncatedDistribution distribution=class=Weibull name=Weibull dimension=1 alpha=1 beta=1 gamma=0 bounds=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[1.5] upper bound=class=Point name=Unnamed dimension=1 values=[7.8] finite lower bound=[1] finite upper bound=[1] thresholdRealization=0.5 bounds=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[2.5] upper bound=class=Point name=Unnamed dimension=1 values=[6] finite lower bound=[1] finite upper bound=[1] thresholdRealization=0.5, simplified=class=TruncatedDistribution name=TruncatedDistribution distribution=class=Weibull name=Weibull dimension=1 alpha=1 beta=1 gamma=0 bounds=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[2.5] upper bound=class=Point name=Unnamed dimension=1 values=[6] finite lower bound=[1] finite upper bound=[1] thresholdRealization=0.5
+d=class=TruncatedDistribution name=TruncatedDistribution distribution=class=Beta name=Beta dimension=1 r=1.5 t=7.8 a=-1 b=2 bounds=class=Interval name=Unnamed dimension=1 lower bound=class=Point name=Unnamed dimension=1 values=[-2.5] upper bound=class=Point name=Unnamed dimension=1 values=[6] finite lower bound=[1] finite upper bound=[1] thresholdRealization=0.5, simplified=class=Beta name=Beta dimension=1 r=1.5 t=7.8 a=-1 b=2
