@@ -45,6 +45,7 @@
 === Bug fixes ===
  * #949 (LowDiscrepancyExperiment for distributions having dependent copula)
  * #952 (Limitation on distribution type for polynomial chaos?)
+ * #953 (RandomMixture can fail with truncated distribution)
 
 == 1.11 release (2018-05-11) == #release-1.11
 
